# Garbage-Collector-for-C-language

./: .gitignore  CMakeLists.txt  README.md  test.c
include/: gc.h
src/: gc.cpp
